<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/dialog"
    android:background="@drawable/dialog_style"
    android:padding="30dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/dia_surname"
        android:textColorHint="@color/color_white">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/dia_name"
        android:textColorHint="@color/color_white">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/dia_patronymic"

        android:textColorHint="@color/color_white">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patronymic_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/photo_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:textColor="@color/color_white"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:padding="8dp"
        android:hint="@string/dia_photo"
        android:textColorHint="@color/color_white"
        android:textIsSelectable="true"
        />


    <Button
        android:id="@+id/no_btn_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dia_btn_no"
        android:background="@drawable/button"
        android:textColor="@color/color_white"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/repeat_btn_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dia_btn_repeat"
        android:background="@drawable/button"
        android:textColor="@color/color_white"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/yes_btn_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dia_btn_yes"
        android:background="@drawable/button"
        android:textColor="@color/color_white"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>