<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Description"
    android:gravity="center"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="6sp"
        android:layout_marginRight="6sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/desc_target_hint"
        android:textColorHint="@color/color_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/desc_response_hint"
        android:textColorHint="@color/color_white">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_make_photo"
        android:layout_marginTop="20sp"
        android:background="@drawable/button"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        style="@style/Theme.MaterialComponents"/>

    
    
</LinearLayout >